# GPUSpectral

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  format.bat
demo/: CMakeLists.txt  main.cpp
demo/assets/cornell-box/: scene.xml  yesdragon.mtl
resources/: anime.gltf  cube.lib  material.lib
src/GPUSpectral/: CMakeLists.txt  Camera.h  Engine.cpp  Engine.h  Loader.cpp  Loader.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Window.h  main.cpp
src/GPUSpectral/assets/scenes/coffee/: scene.xml
src/GPUSpectral/assets/scenes/test/: scene.xml
src/GPUSpectral/assets/scenes/test3/: scene.xml
src/GPUSpectral/assets/shaders/: DrawTexture.frag  pt_common.glsl  raygen.rgen  rayhit.rchit
src/GPUSpectral/backend/: Command.inc  Driver.h  DriverBase.h  DriverTypes.h  Handles.h  PipelineState.h  Program.h
src/GPUSpectral/backend/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDriver.cpp  VulkanDriver.h  VulkanHandles.cpp  VulkanHandles.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanRays.cpp  VulkanRays.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTypes.cpp  VulkanWSI.cpp  VulkanWSI.h
src/GPUSpectral/engine/: Engine.cpp  Engine.h  Loader.cpp  Loader.h  Window.cpp  Window.h
src/GPUSpectral/kernels/: BSDF.inc  BSDFSampler.cuh  Common.cuh  LightSampler.cuh  LightSampler.h  PathTracer.cu  PathTracer.cuh  PathTracer.h  VectorMath.cuh  add.cu  add.h  path_tracer.cu  path_tracer.h  vector_math.h
src/GPUSpectral/loader/: SceneLoader.cpp  SceneLoader.h
src/GPUSpectral/math/: VectorMath.h
src/GPUSpectral/renderer/: Camera.cpp  Camera.h  CudaPipeline.cpp  CudaPipeline.h  CudaSBT.cpp  CudaSBT.h  CudaTLAS.cpp  CudaTLAS.h  Image.h  Mesh.cpp  Mesh.h  PathTracer.cpp  PathTracer.h  Procedural.cpp  Procedural.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h
src/GPUSpectral/renderer/framegraph/: FrameGraph.cpp  FrameGraph.h  Resource.h
src/GPUSpectral/utils/: CudaUtil.h  FixedVector.h  GCPool.h  Log.h  ResourceList.h  Util.h
src/GPUSpectral/utils/HalfFloat/: stdint.h  umHalf.h
src/VKGIRenderer/: CMakeLists.txt  Camera.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Light.h  Loader.cpp  Loader.h  Material.h  Mesh.h  Scene.cpp  Scene.h  Window.cpp  Window.h  main.cpp
src/VKGIRenderer/assets/scenes/: Unity2Skfb.gltf
src/VKGIRenderer/assets/scenes/test2/: scene.xml
src/VKGIRenderer/assets/shaders/: BSDF.inc  DDGIProbeDepthUpdate.comp  DDGIProbeIrradianceUpdate.comp  DDGIProbeRayGen.comp  DDGIProbeRayShade.comp  DDGIShade.frag  DeferredRender.frag  DrawTexture.vert  ForwardPhong.frag  ForwardRT.frag  ForwardRT.vert  GBufferGen.frag  GBufferGen.vert  PointShadowGen.vert  ToneMap.frag  common.glsl  miss.glsl  miss.rmiss  pt_common.glsl  raygen.glsl  raygen.rgen  rayhit.glsl  rayhit.rchit
src/VKGIRenderer/backend/: Command.inc  DriverTypes.h  Handles.h  PipelineState.h  Program.h
src/VKGIRenderer/backend/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDriver.cpp  VulkanDriver.h  VulkanHandles.cpp  VulkanHandles.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanRays.cpp  VulkanRays.h  VulkanTexture.cpp  VulkanTypes.cpp  VulkanWSI.cpp  VulkanWSI.h
src/VKGIRenderer/renderer/: PathTracer.cpp  PathTracer.h  Renderer.cpp  Renderer.h
src/VKGIRenderer/renderer/framegraph/: FrameGraph.cpp  FrameGraph.h
src/VKGIRenderer/utils/: Hash.h  Log.h  ResourceList.h  Util.h
src/sunho3d/: CMakeLists.txt  Camera.h  EmbedFile.c  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Light.h  Loader.cpp  Loader.h  Material.h  Renderer.cpp  Renderer.h  ResourceList.h  Scene.cpp  Scene.h  Transform.h  Window.cpp  Window.h
src/sunho3d/assets/shaders/: DDGIProbeDepthUpdate.comp  DDGIProbeIrradianceUpdate.comp  DDGIProbeRayGen.comp  DDGIProbeRayShade.comp  DDGIProbeUpdate.comp  DDGIShade.frag  DisplayTexture.frag  ForwardPhong.vert  ForwardRT.frag  GBufferGen.frag  PointShadowGen.frag  ProbeDebug.frag  ProbeDebug.vert  common.glsl  probe.glsl
src/sunho3d/backend/: Command.inc  DriverBase.h  DriverTypes.h  Handles.h  PipelineState.h  Program.h
src/sunho3d/backend/vulkan/: Context.cpp  Context.h  Driver.cpp  Driver.h  Handles.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommands.cpp  VulkanCommands.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDriver.cpp  VulkanDriver.h  VulkanHandles.cpp  VulkanHandles.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanPipelinePool.h  VulkanRays.cpp  VulkanRays.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTypes.cpp  VulkanTypes.h  VulkanWSI.cpp  VulkanWSI.h
src/sunho3d/framegraph/: FrameGraph.cpp  FrameGraph.h  RenderPass.cpp  RenderPass.h
src/sunho3d/framegraph/shaders/: DDGIProbeRayGen.comp  DDGIShade.frag  DisplayTexture.frag  DisplayTexture.vert  ForwardPhong.frag  ForwardPhong.vert  ForwardRT.frag  probe.glsl
src/sunho3d/renderer/: Renderer.cpp  Renderer.h
src/sunho3d/renderer/framegraph/: FrameGraph.cpp  FrameGraph.h  RenderPass.h  Resource.h
src/sunho3d/renderer/shaders/: DDGIProbeRayGen.comp  DDGIProbeRayShade.comp  DDGIProbeUpdate.comp  DDGIShade.frag  DeferredRender.frag  ForwardRT.frag  GBufferGen.frag  PointShadowGen.vert  common.glsl  probe.glsl
src/sunho3d/shaders/: triangle.frag  triangle.vert
src/sunho3d/utils/: EmbedFile.c  FixedVector.h  GCPool.h  Hash.h  Log.h  ResourceList.h
src/sunho3d/utils/HalfFloat/: umHalf.inl
